# wgpu-learning

./: Cargo.toml  build.rs
src/: camera.rs  instance.rs  main.rs  model.rs  resources.rs  shader.wgsl  state.rs  texture.rs  vertex.rs  window_adapter.rs
