[package]
name = "wgpu-learning"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.13", features = [ "derive" ] }
env_logger = "0.10.0"
log = "0.4.17"
pollster = "0.2.5"
wgpu = "0.14.2"
winit = "0.27.5"
anyhow = "1.0.68"
cgmath = "0.18.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
